<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_viaje"
            android:icon="@mipmap/tripmap"
            android:title="@string/menu_sviaje" />
        <item
            android:id="@+id/nav_seguimiento"
            android:icon="@mipmap/history"
            android:title="@string/menu_seguimiento" />
        <item
            android:id="@+id/nav_sesion"
            android:icon="@mipmap/logout"
            android:title="@string/menu_csesion" />
    </group>

</menu>
